--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/api": "2.0.0-rc.4",
+    "@tauri-apps/plugin-fs": "^2.0.0-rc",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.6.2",
+    "@tauri-apps/cli": "2.0.0-rc.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
