--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ tauri = { version = "2.0.0-rc.13", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-fs = "2.0.0-rc"
 tokio = "1.40.0"
+tauri-plugin-dialog = "2.0.0-rc"
