--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@tauri-apps/plugin-dialog": "2.0.0-rc.1",
     "@tauri-apps/plugin-fs": "2.0.0-rc.2",
     "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "2.0.0-rc.16",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.12",
-    "typescript": "^5"
+    "@types/node": "20.16.5",
+    "@types/react": "18.3.8",
+    "@types/react-dom": "18.3.0",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.12",
+    "typescript": "5.6.2"
   }
 }
